# Fire-simulation

./: CMakeLists.txt  README.md
Demo/: fire-wind.webm  fire_cube.webm
shaders/: ball_fragment.glsl  ball_vertex.glsl  cube_fragment.glsl  cube_glass_fragment.glsl  cube_vertex.glsl  fragment.glsl  fragment_texture.glsl  mirror_fragment.glsl  mirror_vertex.glsl  vertex.glsl
src/: cs488.h  main.cpp  stb_image.h  stb_image_write.h
